# GVS

./: README.md  workload.sh  workload_query1M.sh
Evaluate_Hardness/: LIDnRC.cpp  README.md  eval.sh  release.sh
NeighborhoodDiversification/: README.md
SeedSelections/: README.md
code/: README.md  REAMME.md
code/ELPIS/: README.md
code/LSH-APG/: Makefile  README.md  indexlshapg.sh  querylshapg.sh  workload_builder.sh
code/SPTAG/: CMakeLists.txt  buildconfig.ini  indexsptag.sh  querysptag.sh  workload_SPTAGBKTnKDT.sh
code/SPTAG/AnnService/: CMakeLists.txt
code/SPTAG/AnnService/inc/Core/: SearchQuery.h  VectorIndex.h
code/SPTAG/AnnService/inc/Core/BKT/: ParameterDefinitionList.h
code/SPTAG/AnnService/inc/Core/KDT/: ParameterDefinitionList.h
code/SPTAG/AnnService/inc/Helper/: VectorSetReader.h
code/SPTAG/AnnService/inc/Helper/VectorSetReaders/: DefaultReader.h  MemoryReader.h  TxtReader.h  XvecReader.h
code/SPTAG/AnnService/src/Core/: VectorIndex.cpp
code/SPTAG/AnnService/src/Core/BKT/: BKTIndex.cpp
code/SPTAG/AnnService/src/Core/KDT/: KDTIndex.cpp
code/SPTAG/AnnService/src/Helper/: VectorSetReader.cpp
code/SPTAG/AnnService/src/Helper/VectorSetReaders/: DefaultReader.cpp  TxtReader.cpp  XvecReader.cpp
code/SPTAG/AnnService/src/MainTest/: mainTest.cpp
code/SPTAG/Debug/: libzstd.so.1.5.2  zstd  zstd-frugal
code/VAMANA/: CMakeLists.txt  README.md  indexvamana.sh  queryvamana.sh  release.sh  workload_builder1M.sh  workload_query1M.sh
code/VAMANA/include/: index.h  utils.h
code/VAMANA/src/: aux_utils.cpp  index.cpp
code/VAMANA/tests/: CMakeLists.txt  build_memory_index.cpp  diskann.cpp  diskvamana.cpp  search_memory_index.cpp  vamana.cpp  vamananob.cpp
code/VAMANA/tests/utils/: tsv_to_bin.cpp
code/dpg/: CMakeLists.txt  REQDME.md  indexdpg.sh  querydpg.sh  release.sh
code/dpg/include/dpg/: builder.h  component.h
code/dpg/include/weavess/: index.h
code/dpg/src/: component_entry.cpp  component_init.cpp
code/dpg/test/: CMakeLists.txt  dpg.cpp
code/efanna/: CMakeLists.txt  README.md  indexefanna.sh  queryefanna.sh  workload_queryefanna1M.sh
code/efanna/include/efanna2e/: util.h
code/efanna/src/: index_kdtree.cpp
code/efanna/tests/: CMakeLists.txt  efanna.cpp  test_nndescent
code/hcnng/: CMakeLists.txt  README.md  README.me  indexhcnng.sh  queryhcnnng.sh
code/hcnng/include/hcnng/: Distances.h  distance.h
code/hcnng/src/: builder.cpp  component_conn.cpp  component_refine.cpp  component_route.cpp  component_search_entry.cpp
code/hnsw/: CMakeLists.txt  README.md  indexgraph.sh  main.cpp  params.txt  querygraph.sh  workload.sh
code/hnsw/include/: PTK.h
code/hnsw/include/hnswlib/: hnswalg.h  hnswlib.h
code/kgraph/: CMakeLists.txt  README.me  indexkgraph.sh  querykgraph.sh  release.sh
code/kgraph/src/: builder.cpp  component_candidate.cpp  component_prune.cpp
code/kgraph/test/: CMakeLists.txt  kgraph.cpp
code/ngt/: README.md
code/nsg/: README.md
code/nsg/include/efanna2e/: parameters.h
code/nsg/src/: index_nsg.cpp
code/nsg/tests/: test_nsg_optimized_search.cpp
code/ssg/: CMakeLists.txt  README.md  indexssg.sh  queryssg.sh  workload_builder1M.sh
code/ssg/src/: index_ssg.cpp
code/ssg/tests/: CMakeCache.txt
data/: CMakeLists.txt  README  Readme  lid.cpp  release.sh
data/real/: README  README.md
data/synthetic/: README.md  generate_powerlaw_randomness.py
methodes/LSH-APG/: CMakeLists.txt
methodes/LSH-APG/src/: Preprocess.cpp  Preprocess.h  Query.cpp  alg.h  basis.h  divGraph.h  main.cpp
methodes/efanna/: param.txt
methodes/efanna/src/: Makefile  cmake_install.cmake  index_graph.cpp
methodes/efanna/tests/: efanna  test_kdtree_graph  test_nndescent_refine
methodes/hnsw/: CMakeLists.txt  main.cpp
methodes/hnsw/include/: PTK.h  sax.h  sax_breakpoints.h
methodes/nsg/: CMakeLists.txt  params.txt
methodes/nsg/tests/: CMakeLists.txt  kmeans.cpp  nsg.cpp  test_nsg_index.cpp
methodes/ssg/src/: CMakeLists.txt
methodes/ssg/tests/: CMakeLists.txt  ssg.cpp
